# ssc

./: CMakeLists.txt  README.md  sample_config.yml
src/: connection_menu.hpp
